Fix multi level table styling + make complex components stretchable

--- a/projects/sparkle-ui/styles/components/sparkle-form-field.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-form-field.component.scss
@@ -61,6 +61,15 @@ $spkFormFieldShadow: false !default;
       }
     }
 
+    &.stretch {
+      width: 100%;
+
+      .input-wrap,
+      input {
+        width: 100%;
+      }
+    }
+
     &.center {
       .input-wrap input[type='number'],
       .input-wrap input {
