--- a/projects/sparkle-ui/styles/components/sparkle-menu.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-menu.component.scss
@@ -9,6 +9,14 @@ $spkMenu: true !default;
     display: inline-flex;
     position: relative;
 
+    &.stretch {
+      width: 100%;
+
+      [trigger] > * {
+        width: 100%;
+      }
+    }
+
     [trigger]:has(spk-icon) {
       position: relative;
 
